--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ div	{
     margin: 0px;
     margin-left: auto;
     margin-right: auto;
-    width:  766px;
+    width:  80%;
     padding: 8px 32px 8px 32px;
     align: center;
     border: 2px solid #6a4c00;
@@ -23,7 +23,7 @@ div	{
     margin: 0px;
     margin-left: auto;
     margin-right: auto;
-    width: 766px;
+    width: 80%;
     padding: 8px 32px 8px 32px;
     align: center;
     border: 1px solid #000000;
@@ -61,7 +61,7 @@ display: inline-block;
 }
 #fu	{
     padding: 32px 0px 32px 0px;
-    width:  830px
+    width:  80%
 }
 #head	{
     color: #6a4c00;
